:lipstick: Fixed spacing of add to cart button

--- a/css/style.css
+++ b/css/style.css
@@ -631,10 +631,11 @@ footer {
 .product-description {
     color: var(--parchment-white);
     margin: 0.25rem;
+    margin-bottom: 1em;
 }
 
 .product-add-to-cart-btn {
-    margin: 1rem;
+    margin-top: auto;
     font-family: Arial;
     font-size: 0.9rem;
     font-weight: 900;
